Add images, papers folders; modify potential_partners.docx, todo.txt

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 ToDo - Updated Thu 4/1/2021
+(items removed when completed/approved) 
 
 Santosh:
 Contacting previous partners
@@ -9,4 +10,3 @@ Dante:
 New doc: Partnership With C4G 
 Rubric: for Reflection Papers
 Grading Scheme example
-
