--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 DANTE TODO - 5/20/2021
-- Augment project rubric in assignments.docx: include accessibility tools assessment (WCAG, W3C HTML/CSS conformance)
-- Add above tools to resources section of course site(s)
+- Augment project rubric in assignments.docx: include accessibility tools assessment (WCAG, W3C HTML/CSS conformance) - DONE
+- Add above tools to resources section of course site(s) - DONE
+- Add to assignments.docx: Project Process details (rubric, team formation process) - DONE
+- ToDo doc moved to root directory of repo - DONE
 
 DANTE TODO - 4/14/2021 - DONE (site redesign in progress; current site: https://computingcenterforsocialgood.org/c4g2)
 - Public-facing site: Redo menu to include login to Canvas course - DONE
